# widgem

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  ci_item.yml  ci_matrix.yml  install_dependencies.sh  integration_test.yml
.melodium-ci/: Compo.toml
examples/: start.rs
macros/: Cargo.toml
macros/src/: lib.rs
salvation/: Cargo.toml
salvation/examples/: start.rs
salvation/src/: accessible.rs  callback.rs  draw.rs  event.rs  event_loop.rs  key.rs  layout.rs  lib.rs  shared_window.rs  shortcut.rs  style.rs  system.rs  text.rs  text_editor.rs  timer.rs  types.rs  window.rs  window_handler.rs
salvation/src/layout/: grid.rs
salvation/src/shortcut/: parse.rs
salvation/src/style/: button.rs  computed.rs  css.rs  defaults.rs  grid.rs  image.rs  scroll_bar.rs  text_input.rs
salvation/src/text/: action.rs  edit.rs  editor.rs
salvation/src/widgets/: address.rs  button.rs  column.rs  common.rs  ext.rs  ext_impl.rs  id.rs  image.rs  label.rs  menu.rs  mod.rs  padding_box.rs  root.rs  row.rs  scroll_area.rs  scroll_bar.rs  stack.rs  text_input.rs  viewport.rs  widget_trait.rs  window.rs
salvation/themes/default/: theme.css
src/: accessible.rs  callback.rs  draw.rs  event.rs  event_loop.rs  layout.rs  lib.rs  shortcut.rs  style.rs  system.rs  text_editor.rs  timer.rs  types.rs  window.rs
src/layout/: grid.rs
src/shortcut/: parse.rs
src/style/: button.rs  computed.rs  condition.rs  css.rs  defaults.rs  scroll_bar.rs  text_input.rs
src/widgets/: button.rs  column.rs  image.rs  label.rs  mod.rs  padding_box.rs  scroll_area.rs  scroll_bar.rs  stack.rs  text_input.rs
test_kit/: Cargo.toml
test_kit/src/: context.rs  lib.rs  review.rs
tester/: Cargo.toml
tester/src/: context.rs  lib.rs  window.rs
tests/: Cargo.toml  Dockerfile  run.sh  run2.sh  tests.Dockerfile
tests/scripts/: builder.Dockerfile  review.sh  run_in_docker.sh  run_tests.sh  run_tests_in_docker.sh  setup_docker.sh  tester.sh  tester_with_docker.sh  tester_with_host.sh  tests.Dockerfile  xfce.Dockerfile  xfce_entrypoint.sh
tests/src/: button.rs  button_tests.rs  context.rs  label.rs  label_tests.rs  main.rs  menu.rs  menu_tests.rs  review.rs  run.rs  scroll_area.rs  scroll_area_tests.rs  scroll_bar.rs  scroll_bar_tests.rs  simple_form.rs  tests.rs  text_area_tests.rs  text_input.rs  text_input_tests.rs
tests/src/test_cases/: mod.rs  scroll_bar.rs  scroll_bar_keyboard.rs  scroll_bar_mouse_scroll.rs  scroll_bar_pager.rs  scroll_bar_resize.rs  scroll_bar_right_arrow.rs  scroll_bar_slider.rs  scroll_bar_slider_extremes.rs  text_input.rs
tests/src/test_cases/scroll_bar/: mod.rs
tests/src/test_cases/text_input/: mod.rs
tests/xfce/: xfce4-panel-left26-bottom48.xml  xfce4-panel-middle-vertical-bottom48.xml  xfce4-panel-right26-bottom48.xml  xfce4-panel-top50-bottom25.xml  xfce4-panel-top50.xml
tests2/: Cargo.toml  Dockerfile
tests2/src/: context.rs  main.rs
tests2/src/test_cases/: text_input.rs
tests2/src/test_cases/text_input/: mod.rs
themes/default/: theme.css  theme.json5
uitest/: Cargo.toml
uitest/src/: lib.rs  linux.rs  macos.rs  window.rs  windows.rs  xcap_window.rs
widgem/: Cargo.toml
widgem/examples/: start.rs
widgem/src/: accessibility.rs  app.rs  app_builder.rs  callback.rs  child_key.rs  draw.rs  event.rs  event_loop.rs  items.rs  key.rs  layout.rs  lib.rs  monitor.rs  pixmap.rs  shared_window.rs  shortcut.rs  style.rs  system.rs  text.rs  text_editor.rs  timer.rs  types.rs  widget_base.rs  widget_ext.rs  widget_initializer.rs  widget_trait.rs  widgets.rs  window_handler.rs
widgem/src/items/: with_index.rs  with_key.rs
widgem/src/layout/: grid.rs
widgem/src/monitor/: x11.rs
widgem/src/style/: common.rs  css.rs  text_input.rs
widgem/src/text/: action.rs  editor.rs  text_handler.rs
widgem/src/widgets/: address.rs  base.rs  button.rs  column.rs  common.rs  ext.rs  id.rs  image.rs  label.rs  menu.rs  mod.rs  padding_box.rs  root.rs  row.rs  scroll_area.rs  scroll_bar.rs  stack.rs  text_area.rs  text_input.rs  widget_trait.rs  window.rs
widgem/themes/default/: theme.css
