[workspace]

members = ["salvation", "macros", "tests", "uitest", "test_kit"]
resolver = "2"

[workspace.dependencies]
salvation = { path = "salvation" }
salvation_macros = { path = "macros", version = "0.0.1" }
uitest = { path = "uitest" }
salvation_test_kit = { path = "test_kit" }

accesskit = "0.19.0"
accesskit_winit = "0.27.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
arboard = "3.5.0"
bitflags = "2.9.1"
bytemuck = "1.23.0"
clap = { version = "4.5.39", features = ["derive"] }
cosmic-text = "0.14.2"
ctor = "0.4.2"
derivative = "2.2.0"
derive_more = { version = "2.0.1", features =["full"] }
env_logger = "0.11.8"
fs-err = "3.1.0"
image = "0.25.6"
itertools = "0.14.0"
lightningcss = { version = "1.0.0-alpha.66", features = ["serde"] }
line-straddler = "0.2.3"
log = "0.4.27"
once_cell = "1.21.3"
ordered-float = "5.0.0"
png = "0.17.16"
priority-queue = "2.4.0"
quote = "1.0.40"
range-ext = "0.3.0"
resvg = { version = "0.45.1", default-features = false }
scoped-tls = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
softbuffer = "0.4.6"
strict-num = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.101", features = ["full"] }
thiserror = "2.0.12"
tiny-skia = "0.11.4"
unicode-segmentation = "1.12.0"
usvg = { version = "0.45.1", default-features = false }
winit = "0.30.11"
x11rb = { version = "0.13.1", features = ["res"] }
xcap = "0.6.0"
