[workspace]

members = ["widgem", "macros", "tests", "uitest", "tester"]
resolver = "2"

[workspace.dependencies]
widgem = { path = "widgem" }
widgem_macros = { path = "macros", version = "0.0.1" }
uitest = { path = "uitest" }
widgem_tester = { path = "tester" }

accesskit = "0.19.0"
accesskit_winit = "0.27.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
arboard = "3.5.0"
bitflags = "2.9.1"
bytemuck = "1.23.0"
cadd = "0.1.0"
clap = { version = "4.5.39", features = ["derive"] }
chrono = { version = "0.4.42" }
cosmic-text = "0.14.2"
core-graphics = "0.25.0"
ctor = "0.4.2"
derivative = "2.2.0"
derive_more = { version = "2.0.1", features =["full"] }
enigo = { version = "0.6.1", features = ["platform_specific"] }
fs-err = "3.1.0"
image = "0.25.8"
itertools = "0.14.0"
lightningcss = { version = "1.0.0-alpha.66", features = ["serde"] }
line-straddler = "0.2.3"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-application-services = "0.3.1"
objc2-core-graphics = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-foundation = "0.3.1"
once_cell = "1.21.3"
ordered-float = { version = "5.0.0", features = ["serde"] }
png = "0.17.16"
priority-queue = "2.4.0"
quote = "1.0.40"
rand = "0.9.2"
range-ext = "0.3.0"
regex = "1.11.2"
resvg = { version = "0.45.1", default-features = false }
scoped-tls = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde-value = "0.7.0"
softbuffer = "0.4.6"
strict-num = "0.2.0"
stringcase = "0.4.0"
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.101", features = ["full"] }
tempfile = "3.22.0"
thiserror = "2.0.12"
tiny-skia = "0.11.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uiautomation = "0.24.1"
unicode-segmentation = "1.12.0"
usvg = { version = "0.45.1", default-features = false }
windows-sys = { version = "0.59.0" }
winit = "0.30.11"
x11rb = { version = "0.13.1", features = ["res"] }
xcap = "0.7.1"

# Enable optimizations in dev mode for CPU-heavy dependencies.
[profile.dev.package.tiny-skia]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16

[profile.dev.package.softbuffer]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16

[patch.crates-io]
winit = { git = "https://github.com/Riateche/winit.git", rev = "25c76cdf" }
