[package]
name = "salvation_macros"
version = "0.0.1"
edition = "2021"
description = "Macros for salvation widget toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/salvation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.58", features = ["full"] }
quote = "1.0.33"
