[package]
name = "salvation"
version = "0.0.1"
edition = "2021"
description = "A lightweight cross-platform desktop widget toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/salvation"

[dependencies]
salvation_macros = { path = "../macros", version = "0.0.1" }

tiny-skia = "0.11.1"
png = "0.17.10"
salvation-cosmic-text = "0.12.0"
winit = "=0.30.7"
softbuffer = "0.4.1"
bytemuck = "1.13.1"
downcast-rs = "1.2.0"
scoped-tls = "1.0.1"
derive_more = "0.99.17"
bitflags = "2.4.0"
once_cell = "1.18.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
priority-queue = "1.3.2"
arboard = "3.2.1"
line-straddler = "0.2.1"
accesskit = "0.16.0"
accesskit_winit = "0.22.0"
itertools = "0.11.0"
unicode-segmentation = "1.10.1"
strict-num = "0.1.1"
range-ext = "0.3.0"
env_logger = "0.10.0"
log = "0.4.20"
derivative = "2.2.0"
typed-builder = "0.16.0"
thiserror = "1.0.49"
resvg = { version = "0.36.0", default-features = false }
usvg = { version = "0.36.0", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
strum_macros = "0.25.2"
strum = "0.25.0"
lightningcss = { version = "1.0.0-alpha.49", features = ["serde"] }
serde-value = "0.7.0"
fs-err = "2.9.0"
ordered-float = "4.6.0"
