[package]
name = "salvation"
version = "0.0.1"
edition = "2021"
description = "A lightweight cross-platform desktop widget toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/salvation"

[dependencies]
salvation_macros = { workspace = true }

accesskit = { workspace = true }
accesskit_winit = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
cosmic-text = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
lightningcss = { workspace = true }
line-straddler = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
png = { workspace = true }
priority-queue = { workspace = true }
range-ext = { workspace = true }
resvg = { workspace = true }
scoped-tls = { workspace = true }
serde = { workspace = true }
serde-value = { workspace = true }
softbuffer = { workspace = true }
strict-num = { workspace = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true }
unicode-segmentation = { workspace = true }
usvg = { workspace = true }
winit = { workspace = true }
