[package]
name = "salvation_test_kit"
version = "0.1.0"
edition = "2021"

[dependencies]
salvation = { workspace = true }
salvation_macros = { workspace = true }
uitest = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
ctor = { workspace = true }
env_logger = { workspace = true }
fs-err = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
