[package]
name = "widgem_tester"
version = "0.1.0"
edition = "2021"
description = "Test framework for widgem widget toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/widgem"

[[bin]]
name = "widgem_tester"
path = "src/bin/tester/main.rs"

[dependencies]
widgem = { workspace = true }
widgem_macros = { workspace = true }
uitest = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
ctor = { workspace = true }
env_logger = { workspace = true }
fs-err = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tiny-skia = { workspace = true }
derive_more = { workspace = true }
