[package]
name = "widgem_tester"
version = "0.1.0"
edition = "2021"
description = "Test framework for widgem widget toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/widgem"

[package.metadata.bundle.bin.widgem_tester]
identifier = "io.github.Riateche.widgem.tester"
name = "Widgem tester"
icon = [
    "widgem/assets/icon/32x32.png",
    "widgem/assets/icon/64x64.png",
    "widgem/assets/icon/128x128.png",
    "widgem/assets/icon/128x128@2x.png",
]

[[bin]]
name = "widgem_tester"
path = "src/bin/tester/main.rs"

[dependencies]
widgem = { workspace = true }
widgem_macros = { workspace = true }
uitest = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ctor = { workspace = true }
fs-err = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
tiny-skia = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive_more = { workspace = true }
