[package]
name = "widgem_tests"
version = "0.1.0"
edition = "2021"
description = "Tests for widgem widget toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/widgem"

[dependencies]
widgem = { workspace = true }
widgem_test_kit = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
fs-err = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }

[package.metadata.bundle.bin.widgem_tests]
identifier = "io.github.Riateche.widgem.tests"
name = "Widgem tests"
icon = ["widgem/assets/32x32.png", "widgem/assets/128x128.png", "widgem/assets/128x128@2x.png"]
