[package]
name = "uitest"
version = "0.0.1"
edition = "2021"
description = "Desktop UI test library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/salvation"

[dependencies]
xcap = "0.0.13"
x11rb = { version = "0.13.0", features = ["res"] }
anyhow = { version = "1.0.80", features = ["backtrace"] }
