[package]
name = "uitest"
version = "0.0.1"
edition = "2021"
description = "Desktop UI test library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/widgem"

[dependencies]
xcap = { workspace = true }
x11rb = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
enigo = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { workspace = true }
