[package]
name = "uitest"
version = "0.0.1"
edition = "2021"
description = "Desktop UI test library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/widgem"

[dependencies]
xcap = { workspace = true }
x11rb = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
enigo = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os="macos")'.dependencies]
objc2-app-kit = { workspace = true, features = ["NSWorkspace"] }
objc2-application-services = { workspace = true }
objc2-core-foundation = { workspace = true }
